--- a/templates/base.html
+++ b/templates/base.html
@@ -9,7 +9,7 @@
 	<link rel="stylesheet" href="{% static '/css/style.css' %}">
 
 	{% block header %}
-	<title>{% block title %}Default{% endblock %}</title>
+	<title>{% block title %}Melbourne Tram Simulator 2016{% endblock %}</title>
 	{% endblock header %}
 
 </head>
