Add social media icons + fastclick Closes #1 (@Haustraliaer dropped the ball)

--- a/.build/static/css/style.css
+++ b/.build/static/css/style.css
@@ -54,10 +54,6 @@ body.show-embed-code #container {
   min-height: 500px;
 }
 
-html, body {
-  height: 100%; font-size: 20vw;
-}
-
 body {
   background: #68a3a7;
 }
@@ -116,25 +112,14 @@ button:active:before{
 }
 
 .share {
-position: absolute;
-left: 50%;
-bottom: 20px;
-width: 300px;
-margin-left: -150px;
-text-align: center;
-
-}
-
-.fb-share-button {
   position: absolute;
-  bottom: 0px;
+  left: 50%;
+  bottom: 20px;
+  width: 300px;
+  margin-left: -150px;
 }
 
-.fb_iframe_widget {
-  position: absolute;
-  bottom: 0px;
-}
-
-.twitter-share-button {
+.fb-share-button, .twitter-share-button {
   display: inline-block;
-}
+  width: 140px;
+ }
