--- a/templates/base.html
+++ b/templates/base.html
@@ -1,27 +1,44 @@
 <!doctype html>
 <html>
-<head>
-	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0, minimal-ui">
+	<head>
+		<meta charset="utf-8">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0, minimal-ui">
 
-	<link rel="shortcut icon" href="{% static '/images/favicon.ico' %}">
-	<link rel="stylesheet" href="{% static '/css/style.css' %}">
+		<link rel="shortcut icon" href="{% static '/images/favicon.ico' %}">
+		<link rel="stylesheet" href="{% static '/css/style.css' %}">
 
-	{% block header %}
-	<title>{% block title %}Melbourne Tram Simulator 2016{% endblock %}</title>
-	{% endblock header %}
+		{% block header %}
+		<title>{% block title %}Melbourne Tram Simulator 2016{% endblock %}</title>
+		{% endblock header %}
 
-</head>
-<body>
-	{% block content %}
-	Main content
-	{% endblock content %}
+	</head>
+	<body>
 
-	{% block scripts %}
-	<script src="//code.jquery.com/jquery.min.js"></script>
-	<script src="{% static '/js/main.js' %}"></script>
-	{% endblock scripts%}
+		<div id="fb-root"></div>
+		<script>(function(d, s, id) {
+		  var js, fjs = d.getElementsByTagName(s)[0];
+		  if (d.getElementById(id)) return;
+		  js = d.createElement(s); js.id = id;
+		  js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.0";
+		  fjs.parentNode.insertBefore(js, fjs);
+		}(document, 'script', 'facebook-jssdk'));</script>
 
-</body>
+		<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="https://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+
+		{% block content %}
+		Main content
+		{% endblock content %}
+
+		{% block scripts %}
+		<script src="//code.jquery.com/jquery.min.js"></script>
+		<script src="{% static '/js/main.js' %}"></script>
+		<script src="{% static '/js/fastclick.js' %}"></script>
+		{% endblock scripts%}
+
+		<script>$(function() {
+    FastClick.attach(document.body);
+});</script>
+
+	</body>
 </html>
