Add total dings with firebase Closes #2 (@Haustralier dropped the ball, again)

--- a/templates/base.html
+++ b/templates/base.html
@@ -7,6 +7,7 @@
 
 		<link rel="shortcut icon" href="{% static '/images/favicon.ico' %}">
 		<link rel="stylesheet" href="{% static '/css/style.css' %}">
+		<script src='https://cdn.firebase.com/js/client/1.0.15/firebase.js'></script>
 
 		{% block header %}
 		<title>{% block title %}Melbourne Tram Simulator 2016{% endblock %}</title>
@@ -34,6 +35,8 @@
 		<script src="//code.jquery.com/jquery.min.js"></script>
 		<script src="{% static '/js/main.js' %}"></script>
 		<script src="{% static '/js/fastclick.js' %}"></script>
+		<script src="{% static '/js/firebase.js' %}"></script>
+
 		{% endblock scripts%}
 
 		<script>$(function() {
