--- a/.build/static/css/style.css
+++ b/.build/static/css/style.css
@@ -13,7 +13,7 @@ body {
 	text-rendering: optimizeLegibility;
 	height: 100%;
 	color: #777;
-	background: #73bd48;
+	background: #6BBE4B;
 }
 
 p {
@@ -54,10 +54,6 @@ body.show-embed-code #container {
   min-height: 500px;
 }
 
-body {
-  background: #68a3a7;
-}
-
 button {
   position: absolute;
   top: calc(50% - 80px);
@@ -71,8 +67,7 @@ button {
   box-shadow:
     0 10px 0 #888888,
     0 20px 0 #888888,
-    0 10px 0 #888888,
-    -10px 40px 0 hsla(0, 0%, 0%, .2);
+    -10px 30px 0 hsla(0, 0%, 0%, .2);
 }
 
 button:before {
@@ -89,7 +84,7 @@ button:before {
     0 20px 0 #c54c57,
     0 30px 0 #c54c57,
     0 40px 0 #c54c57,
-    -10px 60px 0 hsla(0, 0%, 0%, .1);
+    -5px 50px 0 hsla(0, 0%, 0%, .1);
   content: '';
   transition: all 50ms;
 }
@@ -98,38 +93,27 @@ button:active:before{
   top: 0px;
   box-shadow:
     0 0px 0 #c54c57,
-    0 00px 0 #c54c57,
-    0 00px 0 #c54c57,
+    0 0px 0 #c54c57,
+    0 0px 0 #c54c57,
     0 5px 0 #c54c57,
-    -5px 10px 0 hsla(0, 0%, 0%, .1);
+    0 5px 0 hsla(0, 0%, 0%, .1);
 }
 
 .logo {
+  max-width: 200px;
   margin: 0 auto;
   margin-top: 20px;
   display: block;
 }
 
-.share {
+.counter {
   position: absolute;
-  text-align: center;
   left: 50%;
   bottom: 20px;
   width: 300px;
   margin-left: -150px;
-}
-
-.counter {
-  padding-bottom: 10px;
+  text-align: center;
   color: white;
-  font-size: 13px;
-}
-
-
-
-.fb-share-button {
-  position: relative;
-  top: -2px;
-  margin-right: 5px;
-  margin-left: 25px;
+  font-size: 11px;
+  font-weight: bold;
 }
